# Ollama-Hack-V2

./: DATABASE_MIGRATION.md  DATABASE_MIGRATION_SUMMARY.md  DEADLOCK_FIX.md  DISCOVERY_IMPLEMENTATION.md  DISCOVERY_QUICK_REF.md  DISCOVERY_README.md  DISCOVERY_SCANNER.md  DISCOVERY_SETUP.md  README.md  README_CN.md  TRANSLATION_SUMMARY.md  docker-compose.dev.yml  docker-compose.example.yml  fix_chinese.py  fix_remaining_chinese.py  package-lock.json  test-discovery.sh  translate.py  translate2.py  translate3.py  translate_remaining.py
.github/workflows/: test.yml
backend/: pyproject.toml
backend-go/: .env  .env.example  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  coverage.html  coverage.out  go.mod  go.sum
backend-go/cmd/server/: main.go
backend-go/internal/config/: config.go  config_test.go
backend-go/internal/database/: database.go  database_test.go  integration_test.go
backend-go/internal/handlers/: admin_health.go  aimodel.go  apikey.go  auth.go  cache.go  discovery.go  endpoint.go  handlers_input_test.go  handlers_test.go  handlers_validation_test.go  integration_test.go  metrics.go  ollama.go  ollama_test.go  plan.go  user.go  validation_comprehensive_test.go
backend-go/internal/middleware/: auth.go  auth_test.go
backend-go/internal/models/: aimodel.go  aimodel_test.go  apikey.go  apikey_test.go  endpoint.go  endpoint_test.go  plan.go  plan_test.go  user.go  user_test.go
backend-go/internal/services/: auth.go  auth_test.go  cleanup.go  discovery_scanner.go  ollama.go  (+7 more)
backend-go/migrations/: add_endpoint_type_and_api_key.sql
backend/src/: config.py  database.py
backend/src/endpoint/: service.py  utils.py
discovery-service/: .env.example  Dockerfile  README.md  go.mod  main.go
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  provider.tsx
(+61 files in other folders)
